# islands-circuit-designer

./: .gitignore  .gitmodules  CMakeLists.txt  component_metadata.h  file_actions.cpp  file_actions.h  main.cpp  release.sh  windows-cross.cmake
